crates/validation/tests/snapshots/secrets_tests__secrets_admit_image_rule_for_connector_images.snap
---
source: crates/validation/tests/secrets_tests.rs
expression: "(outcome.errors, capture.spec.as_ref().unwrap().secrets.clone(),)"
---
(
    [],
    {
        "acmeCo/db-credentials": "/credentials",
        "vendorCo/oauth/source/image/oauth-client": "/credentials/token",
    },
)
