crates/validation/tests/snapshots/secrets_tests__secrets_image_rule_excludes_imageless_endpoints.snap
---
source: crates/validation/tests/secrets_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-python/secrets/vendorCo~1oauth~1connectors~1ghcr.io~1estuary~1capture-python~1oauth-client,
        error: capture acmeCo/source-python may use only secrets which are its siblings, but secret vendorCo/oauth/connectors/ghcr.io/estuary/capture-python/oauth-client is not directly under the prefix acmeCo/,
    },
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-widgets/secrets/vendorCo~1oauth~1connectors~1source~1image~1oauth-client,
        error: capture acmeCo/source-widgets may use only secrets which are its siblings, but secret vendorCo/oauth/connectors/source/image/oauth-client is not directly under the prefix acmeCo/,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/acmeCo~1rollups/derive/secrets/vendorCo~1oauth~1connectors~1ghcr.io~1estuary~1derive-python~1oauth-client,
        error: derivation acmeCo/rollups may use only secrets which are its siblings, but secret vendorCo/oauth/connectors/ghcr.io/estuary/derive-python/oauth-client is not directly under the prefix acmeCo/,
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/acmeCo~1dest-widgets/secrets/vendorCo~1oauth~1connectors~1ghcr.io~1estuary~1dekaf-kafka~1oauth-client,
        error: materialization acmeCo/dest-widgets may use only secrets which are its siblings, but secret vendorCo/oauth/connectors/ghcr.io/estuary/dekaf-kafka/oauth-client is not directly under the prefix acmeCo/,
    },
]
