crates/validation/tests/snapshots/secrets_tests__secrets_must_be_siblings.snap
---
source: crates/validation/tests/secrets_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-widgets/secrets/acmeCo~1nested~1db-credentials,
        error: capture acmeCo/source-widgets may use only secrets which are its siblings, or which its connector image vouches for, but secret acmeCo/nested/db-credentials is neither directly under the prefix acmeCo/ nor named <prefix>/connectors/source/image/<secret>,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/acmeCo~1rollups/derive/secrets/bobCo~1api-token,
        error: derivation acmeCo/rollups may use only secrets which are its siblings, or which its connector image vouches for, but secret bobCo/api-token is neither directly under the prefix acmeCo/ nor named <prefix>/connectors/derive/image/<secret>,
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/acmeCo~1dest-widgets/secrets/warehouse-password,
        error: materialization acmeCo/dest-widgets may use only secrets which are its siblings, or which its connector image vouches for, but secret warehouse-password is neither directly under the prefix acmeCo/ nor named <prefix>/connectors/dest/image/<secret>,
    },
]
