crates/validation/tests/snapshots/secrets_tests__secrets_publish_across_task_types.snap
---
source: crates/validation/tests/secrets_tests.rs
assertion_line: 11
expression: outcome.errors
---
[]
