crates/validation/tests/snapshots/secrets_tests__secrets_publish_with_builtin_configs.snap
---
source: crates/validation/tests/secrets_tests.rs
expression: actual
---
[
    (
        "python",
        [],
        Object {
            "config": Object {
                "_python": Object {
                    "collection": String("acmeCo/rollups"),
                    "files": Object {
                        "pyproject.toml": String(""),
                        "rollups/__init__.py": String("python module placeholder"),
                    },
                    "spec": Object {},
                },
                "region": String("us-east-1"),
            },
            "image": String("ghcr.io/estuary/derive-python:stable"),
        },
        {
            "acmeCo/api-token": "/api_token",
        },
    ),
    (
        "typescript",
        [],
        Object {
            "config": Object {
                "_typescript": Object {
                    "collection": String("acmeCo/rollups"),
                    "files": Object {
                        "deno.json": String(""),
                        "rollups/mod.ts": String("typescript module placeholder"),
                    },
                    "spec": Object {},
                },
                "region": String("us-east-1"),
            },
            "image": String("ghcr.io/estuary/derive-typescript:stable"),
        },
        {
            "acmeCo/api-token": "/api_token",
        },
    ),
]
