crates/validation/tests/snapshots/secrets_tests__secrets_publish_with_builtin_environments.snap
---
source: crates/validation/tests/secrets_tests.rs
expression: actual
---
[
    (
        "python",
        [],
        Object {
            "config": Object {
                "dependencies": Object {},
                "environment": Object {
                    "REGION": String("us-east-1"),
                },
                "module": String("python module placeholder"),
            },
            "image": String("ghcr.io/estuary/derive-python:stable"),
        },
        {
            "acmeCo/api-token": "/environment/API_TOKEN",
        },
    ),
    (
        "typescript",
        [],
        Object {
            "config": Object {
                "environment": Object {
                    "REGION": String("us-east-1"),
                },
                "module": String("typescript module placeholder"),
            },
            "image": String("ghcr.io/estuary/derive-typescript:stable"),
        },
        {
            "acmeCo/api-token": "/environment/API_TOKEN",
        },
    ),
]
