crates/validation/tests/snapshots/secrets_tests__secrets_reject_incompatible_endpoints.snap
---
source: crates/validation/tests/secrets_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-widgets,
        error: capture acmeCo/source-widgets uses `secrets`, but its endpoint configuration has a top-level `sops` property: a configuration is either wrapped as a whole by `sops`, or is plaintext and draws its secrets from `secrets` (where `sops` is reserved),
    },
]
