crates/validation/tests/snapshots/secrets_tests__secrets_reject_malformed_stanza_entries.snap
---
source: crates/validation/tests/secrets_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-widgets/secrets/acmeCo~1bad%20name,
        error: acmeCo/bad name cannot be used as name for secret (" name" is invalid),
    },
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-widgets/secrets/acmeCo~1empty-token,
        error: /credentials//password is not a valid JSON pointer ("//password" is invalid),
    },
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-widgets/secrets/acmeCo~1no-slash,
        error: credentials/password is not a valid JSON pointer (missing leading '/' slash),
    },
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-widgets/secrets/acmeCo~1sparse,
        error: capture acmeCo/source-widgets cannot apply secret acmeCo/sparse at endpoint configuration location /credentials/tokens/1000000000: the pointer is incompatible with the configuration's structure,
    },
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-widgets/secrets/acmeCo~1through-scalar,
        error: capture acmeCo/source-widgets cannot apply secret acmeCo/through-scalar at endpoint configuration location /address/port: the pointer is incompatible with the configuration's structure,
    },
]
