crates/validation/tests/snapshots/secrets_tests__secrets_reject_plaintext_values.snap
---
source: crates/validation/tests/secrets_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-widgets,
        error: capture acmeCo/source-widgets endpoint configuration location /credentials/password is annotated `secret: true` and cannot hold a plaintext value: set it with `flowctl secret set` and reference the secret from `secrets`,
    },
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-widgets,
        error: capture acmeCo/source-widgets endpoint configuration location /credentials/token is annotated `secret: true` and cannot hold a plaintext value: set it with `flowctl secret set` and reference the secret from `secrets`,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/acmeCo~1rollups/derive,
        error: derivation acmeCo/rollups endpoint configuration location /credentials/token is annotated `secret: true` and cannot hold a plaintext value: set it with `flowctl secret set` and reference the secret from `secrets`,
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/acmeCo~1dest-widgets,
        error: materialization acmeCo/dest-widgets endpoint configuration location /tunnel is annotated `secret: true` and cannot hold a plaintext value: set it with `flowctl secret set` and reference the secret from `secrets`,
    },
]
