crates/validation/tests/snapshots/secrets_tests__secrets_reject_plaintext_values_of_builtin_environments.snap
---
source: crates/validation/tests/secrets_tests.rs
assertion_line: 118
expression: outcomes
---
[
    [
        Error {
            scope: test://example/catalog.yaml#/collections/acmeCo~1rollups/derive,
            error: derivation acmeCo/rollups endpoint configuration location /environment/API_TOKEN is annotated `secret: true` and cannot hold a plaintext value: set it with `flowctl secret set` and reference the secret from `secrets`,
        },
    ],
    [
        Error {
            scope: test://example/catalog.yaml#/collections/acmeCo~1rollups/derive,
            error: derivation acmeCo/rollups endpoint configuration location /environment/API_TOKEN is annotated `secret: true` and cannot hold a plaintext value: set it with `flowctl secret set` and reference the secret from `secrets`,
        },
    ],
]
