crates/validation/tests/snapshots/secrets_tests__secrets_reject_plaintext_values_of_custom_configs.snap
---
source: crates/validation/tests/secrets_tests.rs
expression: outcomes
---
[
    [
        Error {
            scope: test://example/catalog.yaml#/collections/acmeCo~1rollups/derive,
            error: derivation acmeCo/rollups endpoint configuration location /api_token is annotated `secret: true` and cannot hold a plaintext value: set it with `flowctl secret set` and reference the secret from `secrets`,
        },
    ],
    [
        Error {
            scope: test://example/catalog.yaml#/collections/acmeCo~1rollups/derive,
            error: derivation acmeCo/rollups endpoint configuration location /api_token is annotated `secret: true` and cannot hold a plaintext value: set it with `flowctl secret set` and reference the secret from `secrets`,
        },
    ],
]
