crates/validation/tests/snapshots/secrets_tests__secrets_require_the_v2_runtime.snap
---
source: crates/validation/tests/secrets_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/captures/acmeCo~1source-widgets,
        error: capture acmeCo/source-widgets uses `secrets`, which requires the V2 task runtime: set `enable-runtime-v2: "true"` under its `shards.flags`,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/acmeCo~1rollups/derive/using/python/config,
        error: `config` requires the V2 runtime, which this derivation does not use.
        Please add `shards.flags.enable-runtime-v2: "true"` to this derivation.,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/acmeCo~1rollups/derive,
        error: derivation acmeCo/rollups uses `secrets`, which requires the V2 task runtime: set `enable-runtime-v2: "true"` under its `shards.flags`,
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/acmeCo~1dest-widgets,
        error: materialization acmeCo/dest-widgets uses `secrets`, which requires the V2 task runtime: set `enable-runtime-v2: "true"` under its `shards.flags`,
    },
]
